<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/txt_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_movies"
                tools:src="@drawable/tvshow_dragon_ball" />

            <TextView
                android:id="@+id/txt_score"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/lingkaran"
                android:gravity="center"
                tools:text="78"
                android:textColor="@color/white"
                android:textSize="28sp"
                tools:ignore="RtlHardcoded"/>
            <TextView
                android:id="@+id/txt_derasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/gray"
                android:gravity="center"
                android:padding="5dp"
                tools:text="Ashoi Likin"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="RtlHardcoded"
                app:drawableStartCompat="@drawable/ic_baseline_time"
                android:drawablePadding="3dp"/>
        </FrameLayout>

        <TextView
            android:id="@+id/txt_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Ashoi Likin"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="5dp"
            android:paddingStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:maxWidth="310dp"
            app:layout_constraintTop_toBottomOf="@id/frame"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/oval"/>
        <ImageButton
            android:id="@+id/txt_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/frame"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_share_black"
            android:background="@color/material_on_primary_disabled"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:onClick="shareApp"
            android:contentDescription="@string/share" />


        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_genre"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="klklklklklklklklklkl"
            android:textSize="23sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginStart="15dp"/>
        <View
            android:id="@+id/garis"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            app:layout_constraintTop_toBottomOf="@id/txt_title"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/black"/>
        <TextView
            android:id="@+id/direc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/garis"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/creator"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"/>


        <TextView
            android:id="@+id/txt_director"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/garis"
            app:layout_constraintStart_toEndOf="@id/direc"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            tools:text="aaaaaaaaaaaaaaaaa"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/release1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_director"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/tahun_realese"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/txt_release"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"/>


        <TextView
            android:id="@+id/txt_release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_director"
            app:layout_constraintStart_toEndOf="@id/release1"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            tools:text="18/05/2020"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/overview1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/release1"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/overview"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/txt_overview"
            android:layout_width="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/overview1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            tools:text="Overview"
            android:layout_marginStart="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>